--- a/clientes/templates/users/login.html
+++ b/clientes/templates/users/login.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/Login.css' %}">
+    <link rel="shortcut icon" href="{% static 'css/Imagen/Logo.png' %}" type="image/x-icon">
     <title>Conex God</title>
 </head>
 
@@ -42,7 +43,6 @@
         <div class="circle-image">
             <img class="Logo" src="{% static 'css/Imagen/Logo.png' %}" alt="Logo">
         </div>
-    </div>
     </div>
 </body>
 </html>
