--- a/clientes/templates/clienteAlDia.html
+++ b/clientes/templates/clienteAlDia.html
@@ -1,56 +1,17 @@
 {% extends "sidebar/sidebar.html" %}
 {% load static %}
-{% block title %}Clientes{% endblock %}
+{% block title %}Clientes al dia{% endblock %}
 {% block title_1 %}
-<div class="icons">
-<i class='bx bxs-user check icon'></i>
-<span class="text nav-text p-1">Clientes</span></div>
-
+<div class="icons"><i class='bx bxs-user check icon'></i>
+<span class="text nav-text p-1">Clientes al dia</span></div>
 {% endblock %}
 {% block content %}
 <div class="container p-5 bg-container container-fluid">
     <div class="row">
         <div class="col-lg-12">
-            <!--boton nuevo-->
-            <button id="btnNuevo" type="button" class="btn btn-outline-primary my-3">Nuevo</button>
-            <!--boton generar deuda-->
-            <button id="btnGenerarDeuda" type="button" class="btn btn-outline-danger my-3" data-bs-toggle="modal"
-                data-bs-target="#deudaModal">Generar Deuda</button>
-        </div>
-    </div>
-    <!-- Modal -->
-    <div class="modal fade" id="deudaModal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Generar deuda</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form method="post" id="form-generar">
-                        {% csrf_token %}
-                        <div class="mb-3">
-                            <label for="{{ form_deuda.mes_deuda.id_for_label }}">Mes de Deuda:</label>
-                            {{ form_deuda.mes_deuda }}
-                        </div>
-                        <div class="mb-3">
-                            <label for="{{ form_deuda.año_deuda.id_for_label }}">Año de Deuda:</label>
-                            {{ form_deuda.año_deuda }}
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-primary" id="generarDeuda">Generar deuda</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-12">
             <div class="card">
                 <div class="card-body">
-                    <table id="Clientes" class="table table-hover table-striped" style="width:100%">
+                    <table id="ClientesAlDia" class="table table-hover table-striped" style="width:100%">
                         <thead>
                             <tr>
                                 <th>Cod.Cliente</th>
@@ -60,7 +21,7 @@
                                 <th>Acciones</th>
                             </tr>
                         </thead>
-                        <tbody id="tablaClientes">
+                        <tbody id="tablaClientesDia">
                         </tbody>
                     </table>
                 </div>
@@ -68,7 +29,6 @@
         </div>
     </div>
 </div>
-
 <!--Modal con informacion-->
 <div class="modal fade" id="modal-info" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
@@ -122,7 +82,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title"></h5>
+                <h5 class="modal-title" id="edicion"></h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form id="formClientes" method="post">
@@ -243,6 +203,7 @@
 </div>
 
 
+    </section>
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -255,10 +216,13 @@
     <!-- sweetalert JS -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
+    <!-- DataTables JS -->
 
     <!--JavaScript propio-->
-    <script src="{% static 'js/clientes.js' %}"></script>
-</body>
+    <script src="{% static 'js/clientesDia.js' %}"></script>
+    </body>
 
-</html>
+    </html>
+
+
 {% endblock %}
