--- a/clientes/templates/sidebar/sidebar.html
+++ b/clientes/templates/sidebar/sidebar.html
@@ -10,16 +10,15 @@
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- ======== CSS ======== -->
-    <link rel="stylesheet" href="{% static 'css/side.css' %}">
+    <link rel="shortcut icon" href="{% static 'css/Imagen/Logo.png' %}" type="image/x-icon">
+    
 
     <!-- ===== Boxicons CSS ===== -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css">
 
 
     <!--importamos la libreria Boostrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,25 +27,12 @@
 
     <!--sweetalert-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-    <!-- ===== Boxicons CSS ===== -->
-    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-
-    <!--importamos la libreria Boostrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-
-
-    <!--importamos los estilos del css-->
-    <link rel="stylesheet" href="{% static 'css/home.css' %}">
-
-    <!--<link href="stylesheet" href="Clientes.css">-->
+    
 
     <!--importamos datatables-->
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.3/css/dataTables.bootstrap5.css">
 
     <!--Importamos los script-->
 
@@ -61,23 +47,19 @@
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
     <!--importamos la libreria Boostrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+   
 
 
     <!--importamos los estilos del css-->
-    <link rel="stylesheet" href="{% static 'css/Clientes.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Sidebar.css' %}">
 
-    <!--importamos datatables-->
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
 
-    <link rel="stylesheet" href="{% static 'css/servicios.css' %}">
+    <link rel="stylesheet" href="{% static 'css/cliente.css' %}">
 
-    <link rel="stylesheet" href="{% static 'css/zonas.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Servicios.css' %}">
+
+    <link rel="stylesheet" href="{% static 'css/Zonas.css' %}">
 
 
     <!--crsf token-->
@@ -125,13 +107,13 @@
                             </a>
                         </li>
                         <li class="nav-link">
-                            <a href="#">
+                            <a href="{% url 'cliente_dia' %}">
                                 <i class='bx bxs-user-check icon' style="font-size: 18px;"></i>
                                 <span class="text nav-text" style="font-size: 12px;">Clientes al día</span>
                             </a>
                         </li>
                         <li class="nav-link">
-                            <a href="#">
+                            <a href="{% url 'cliente_deudas' %}">
                                 <i class='bx bxs-user-x icon' style="font-size: 18px;"></i>
                                 <span class="text nav-text" style="font-size: 12px;">Clientes con deuda</span>
                             </a>
@@ -162,7 +144,7 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="{% url 'soporteTecnico' %}">
                             <i class='bx bx-support icon'></i>
                             <span class="text nav-text">Soporte Tecnico</span>
                         </a>
@@ -212,19 +194,19 @@
                 {% block title_1 %}{% endblock %}
             </div>
         </div>
-
-        {% block content %} {% endblock %}
+        <div class="tabla">
+            {% block content %}
+            {% endblock %}
+        </div>
     </section>
 
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
-        crossorigin="anonymous"></script>
+    
     <script src="https://kit.fontawesome.com/09c39ad303.js" crossorigin="anonymous"></script>
     <script src="{% static 'js/sidebar.js' %}"></script>
-    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.datatables.net/2.0.3/js/dataTables.js"></script>
+    <script src="https://cdn.datatables.net/2.0.3/js/dataTables.bootstrap5.js"></script>
 
 </body>
 
