--- a/clientes/templates/zonas.html
+++ b/clientes/templates/zonas.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block title %}Zonas{% endblock %}
 {% block title_1 %}
-<i class='bx bxs-user check icon'></i>
-<span class="text nav-text p-1">Zonas</span>
+<div class="icons"><i class='bx bxs-user check icon'></i>
+    <span class="text nav-text p-1">Zonas</span></div>
 {% endblock %}
 {% block content %}
 
@@ -18,7 +18,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table id="Zonas" class="table table-bordered table-striped" style="width:100%">
+                        <table id="Zonas" class="table table-hover table-striped" style="width:100%">
                             <thead>
                                 <tr>
                                     <th>id</th>
@@ -40,7 +40,7 @@
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #28a745; color: white;">
+            <div class="modal-header">
                 <h5 class="modal-title">Nueva Zona</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
@@ -113,7 +113,7 @@
 <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
 
 <!--JavaScript propio-->
-<script src="{% static 'js/zonas.js' %}"></script>
+<script src="{% static 'js/Zonas.js' %}"></script>
 </body>
 
 </html>
