--- a/clientes/templates/users/login.html
+++ b/clientes/templates/users/login.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static 'css/Login.css' %}">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <link rel="shortcut icon" href="{% static 'css/Imagen/Logo.png' %}" type="image/x-icon">
     <title>Conex God</title>
 </head>
